<resources>
    <string name="app_name">AISearchDemo</string>
    <string name="listening">正在聆听...</string>
    <string name="cmvideo">咪咕视频</string>
    <string name="playvideo">模拟播放界面</string>

    <string name="everybody_watching">大家都在看</string>

    <string name="video_plot_header">剧情简介</string>
    <string name="change_one_video">换一个</string>

    <string name="cancel_search">取消搜索</string>
    <string name="slide_cancel_search">向上滑动取消搜索</string>
    <string name="release_finger_cancel_search">松开手指 取消发送</string>

    <string name="ai_ask_recommend1">大家都在看什么</string>
    <string name="ai_ask_recommend2">我好想看好看的恐怖片</string>
    <string name="ai_ask_recommend3">最近有什么新片子</string>
    <string name="ai_ask_recommend4">我要开通钻石会员</string>
    <string name="ai_ask_recommend5">我的流量还剩余多少</string>

    <string name="page_player">播放器</string>
    <string name="get_voice_text">获取语音文本</string>
    <string name="start_recording">开始录音</string>
    <string name="stop_recording">结束录音</string>
    <string name="page_player_control">响应操作:</string>
    <string name="vdo_pause">暂停</string>
    <string name="vdo_play">播放</string>
    <string name="vdo_next">下一集</string>
    <string name="vdo_previous">上一集</string>
    <string name="vdo_open">打开语音助手</string>
    <string name="vdo_close">关闭语音助手</string>
    <string name="vdo_screen">投屏播放</string>
    <string name="vdo_fastword">快进</string>
    <string name="vdo_backword">快退</string>
    <string name="vdo_fastword_to">快进（快退）至</string>
    <string name="vdo_change">换一集</string>
    <string name="vdo_episode">第几集</string>

    <string name="look_more_resource">查看更多 >></string>

    <string name="video_list_the_day_before">前一天</string>
    <string name="video_list_the_next_day">后一天</string>

    <string name="aiui_video_live_title">直播即将开始</string>
    <string name="aiui_video_live_countdown_day">天</string>
    <string name="aiui_video_live_countdown_hour">时</string>
    <string name="aiui_video_live_countdown_min">分</string>
    <string name="aiui_video_live_countdown_sec">秒</string>
</resources>
