<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/countdown_day"
            android:layout_width="@dimen/dimen_28dp"
            android:layout_height="@dimen/dimen_28dp"
            android:background="@mipmap/icon_aiui_video_live_countdown"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:gravity="center"
            android:text="@string/aiui_video_live_countdown_day"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_15dp" />

        <TextView
            android:id="@+id/countdown_hour"
            android:layout_width="@dimen/dimen_28dp"
            android:layout_height="@dimen/dimen_28dp"
            android:background="@mipmap/icon_aiui_video_live_countdown"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:gravity="center"
            android:text="@string/aiui_video_live_countdown_hour"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_15dp" />

        <TextView
            android:id="@+id/countdown_min"
            android:layout_width="@dimen/dimen_28dp"
            android:layout_height="@dimen/dimen_28dp"
            android:background="@mipmap/icon_aiui_video_live_countdown"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:gravity="center"
            android:text="@string/aiui_video_live_countdown_min"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_15dp" />

        <TextView
            android:id="@+id/countdown_sec"
            android:layout_width="@dimen/dimen_28dp"
            android:layout_height="@dimen/dimen_28dp"
            android:background="@mipmap/icon_aiui_video_live_countdown"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:gravity="center"
            android:text="@string/aiui_video_live_countdown_sec"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_15dp" />
    </LinearLayout>
</LinearLayout>